# logtale

./: .gitignore  README.md  dev_requirements.txt  pyproject.toml
examples/: example.py  example.toml
logtale/: filter.py  formatter.py  logtale.py  utiltity.py
src/: tale.py
templates/: config_template.toml
