[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tale_duckboss"
version = "0.0.1"
authors = [
  { name="DuckBoss" },
]
description = "A simple, easy to use python logging framework that builds on top of the built-in logger module"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: System :: Logging",
]

[project.urls]
Homepage = "https://github.com/DuckBoss/tale"
Issues = "https://github.com/DuckBoss/tale/issues"
